fix: Remove scrollbars to fix header width issue [SAMPLER-34]
This also fixes the arrow layout issue.

This may not be the final resolution if they want the scrollbars back though.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -8,7 +8,6 @@
   bottom: 0;
   right: 0;
   left: 0;
-  overflow: auto;
 
   button {
     &:hover:not(:disabled):not(.disabled) {
